Refactor objectives from execution course managment interface. Deleted some unnecessary code.